--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -14,7 +14,7 @@
     <% @spaces.each do |space| %>
       <tr>
         <td><%= space.space %></td>
-        <td><%= link_to "○", new_space_order_path(space.id) %></td>
+        <td><%= link_to "○", space_orders_path(space.id), method: :post, local: true %></td>
         <td><%= link_to 'Show', space %></td>
         <td><%= link_to 'Edit', edit_space_path(space) %></td>
         <td><%= link_to 'Destroy', space, method: :delete, data: { confirm: 'Are you sure?' } %></td>
