--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -10,20 +10,27 @@
     </tr>
   </thead>
 
-  <tbody>
+  <tbody id="res">
     <% @spaces.each do |space| %>
       <tr>
         <td><%= space.space %></td>
         <% unless space.order.present? %>
-          <td><%= link_to "○", space_orders_path(space.id), method: :post, local: true %></td>
+          <td><%= link_to "○", space_orders_path(space.id), method: :post, remote: true %></td>
         <% else %>
-          <td>×</td>
+          <td><%= @orders.user.name %></td>
         <% end %>
         <td><%= link_to 'Show', space %></td>
         <td><%= link_to 'Edit', edit_space_path(space) %></td>
         <td><%= link_to 'Destroy', space, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
+    <script>
+      (function() {
+        $('#res').on('click', () => {
+          console.log("OK")
+        });
+      })
+    </script>
   </tbody>
 </table>
 
