--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -1,26 +1,34 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Spaces</h1>
+<div class=calendar>
+  <% @week_days.each do |day| %>
+    <div class='item'>
+      <div class='date'>
+        <%= day[:month] %>/<%= day[:date] %>/<%= day[:wday] %>
+        <%# <table>
+          <thead>
+            <tr>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
 
-<table>
-  <thead>
-    <tr>
-      <th>Space</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody id="res">
-    <%= render partial: 'res' %>
-    <script>
-      $(document).ready(function() {
-        $('#res').on('click', () => {
-          window.location.reload();
-        });
-      })
-    </script>
-  </tbody>
-</table>
+          <tbody id="res">
+            <%= render partial: 'res' %>
+            <%# <script>
+              $(document).ready(function() {
+                $('#res').on('click', () => {
+                  window.location.reload();
+                });
+              })
+            </script> %>
+          <%# </tbody> %>
+        <%# </table> %>
+      </div>
+    
+    </div>
+  <% end %>
+</div>
 
 <br>
 <%= link_to 'New User', new_user_registration_path %>
