--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -1,12 +1,42 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Spaces</h1>
-<div class=calendar>
-  <% @week_days.each do |day| %>
-    <div class='item'>
-      <div class='date'>
-        <%= day[:month] %>/<%= day[:date] %>/<%= day[:wday] %>
-        <%# <table>
+<table class=calendar>
+  <thead>
+    <tr>
+      <th>
+        <p>
+          時間\日
+        </p>
+      </th>
+      <% @week_days.each do |day| %>
+        <th class='item'>
+          <div class='date'>
+            <%= day[:month] %>/<%= day[:date] %> <%= day[:wday] %>
+          </div>
+        </th>
+      <% end %>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><p>10:00</p></td>
+      <% @week_days.length.times do %>
+        <td><%= @time.hour %>:<%= @time.min %></td>
+      <% end %>
+    </tr>
+  </tbody>
+</table>
+
+<br>
+<%= link_to 'New User', new_user_registration_path %>
+<%= link_to 'Log_in', new_user_session_path %>
+<%= link_to 'New Space', new_space_path %>
+
+
+
+
+<%# <table>
           <thead>
             <tr>
               <th colspan="3"></th>
@@ -24,13 +54,3 @@
             </script> %>
           <%# </tbody> %>
         <%# </table> %>
-      </div>
-    
-    </div>
-  <% end %>
-</div>
-
-<br>
-<%= link_to 'New User', new_user_registration_path %>
-<%= link_to 'Log_in', new_user_session_path %>
-<%= link_to 'New Space', new_space_path %>
